--- a/src/components/custom-layout/index.module.css
+++ b/src/components/custom-layout/index.module.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
 
-  height: 100%;
+  height: 100vh;
   /* padding: 0 10px; */
   font-family: var(--font-geist-sans);
 
