--- a/src/components/3d-tiles-wrapper/index.module.css
+++ b/src/components/3d-tiles-wrapper/index.module.css
@@ -6,7 +6,7 @@
   max-width: 1.8rem;
 
   display: flex;
-  padding: 8px 5px;
+  padding: 5px 3px;
   justify-content: center;
   align-items: center;
 
@@ -52,6 +52,6 @@
 .wrapper {
   position: relative;
   margin: 2px 0;
-  width: 1.8rem;
+  max-width: 1.8rem;
   height: 1rem;
 }
