--- a/src/pages/pinfu/page.module.css
+++ b/src/pages/pinfu/page.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   height: 100%;
 
-  padding: 5rem 0;
+  padding: 0 1rem;
 }
 
 .wrapper_lines {
@@ -16,7 +16,7 @@
 
 .line {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: center;
   gap: 1rem;
 }
