--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -1,5 +1,7 @@
+.wrapper {
+  margin: .5rem;
+}
 .box {
   padding: 0.5rem;
-  margin: 0.5rem;
-  border-radius: 1rem;
+  border-radius: 0.25rem;
 }
