--- a/src/helpers/createDiscardPond/index.module.css
+++ b/src/helpers/createDiscardPond/index.module.css
@@ -5,10 +5,11 @@
 }
 
 .discard_pond > div {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-top: 100%; /* This maintains the square aspect ratio */
+  aspect-ratio: 1 / 1;
+
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
 .ton_discards {
