--- a/src/components/image-tile-pond/index.module.css
+++ b/src/components/image-tile-pond/index.module.css
@@ -2,7 +2,8 @@
   border-radius: 5px;
   background-color: white;
 
-  max-width: 16%;
+  max-width: 100%;
+  height: 80%;
 
   display: grid;
   grid-auto-rows: auto;
