--- a/src/helpers/createDiscardPond/index.module.css
+++ b/src/helpers/createDiscardPond/index.module.css
@@ -1,3 +1,10 @@
+.page {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  padding: 1rem 1rem;
+}
+
 .discard_pond {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -18,6 +25,7 @@
   grid-column-start: 2;
   grid-column-end: 3;
   background-color: green;
+  transform: rotate(180deg);
 }
 
 .nan_discards {
@@ -26,6 +34,7 @@
   grid-column-start: 1;
   grid-column-end: 2;
   background-color: red;
+  transform: rotate(90deg);
 }
 
 .sha_discards {
@@ -42,4 +51,5 @@
   grid-column-start: 3;
   grid-column-end: 4;
   background-color: blue;
+  transform: rotate(270deg);
 }
