--- a/src/helpers/createDiscardPond/index.module.css
+++ b/src/helpers/createDiscardPond/index.module.css
@@ -26,6 +26,7 @@
   grid-column-end: 3;
   background-color: green;
   transform: rotate(180deg);
+  animation: slideInFromTop 1s 1s;
 }
 
 .nan_discards {
@@ -52,4 +53,17 @@
   grid-column-end: 4;
   background-color: blue;
   transform: rotate(270deg);
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+    transform: rotate(180deg);
+  }
 }
