--- a/src/helpers/createDiscardPond/index.module.css
+++ b/src/helpers/createDiscardPond/index.module.css
@@ -61,28 +61,24 @@
 
 @keyframes slideInFromTop {
   0% {
-    transform: translateY(-100%);
+    transform: translateY(-100%) rotate(180deg);
     opacity: 0;
-    transform: rotate(180deg);
   }
   100% {
-    transform: translateY(0);
+    transform: translateY(0) rotate(180deg);
     opacity: 1;
-    transform: rotate(180deg);
     visibility: visible;
   }
 }
 
 @keyframes slideInFromLeft {
   0% {
-    transform: translateY(-100%);
+    transform: translateX(-100%) rotate(90deg);
     opacity: 0;
-    transform: rotate(180deg);
   }
   100% {
-    transform: translateY(0);
+    transform: translateY(0) rotate(90deg);
     opacity: 1;
-    transform: rotate(180deg);
     visibility: visible;
   }
 }
