--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Oswald", serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -18,6 +18,7 @@ body {
   max-width: 100vw;
   overflow-y: hidden;
   height: 100vh;
+  font-family: "Oswald", serif;
 }
 
 * {
