--- a/src/components/custom-layout/index.module.css
+++ b/src/components/custom-layout/index.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
 
-  height: 100vh;
+  height: 100dvh;
   font-family: "Oswald", serif;
   font-optical-sizing: auto;
   font-weight: 300;
