--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -2,18 +2,22 @@
   margin: 0.5rem;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 .box {
   font-size: small;
   color: #214738;
   padding: 0.5rem;
   border-radius: 0.25rem;
+  flex: 1;
 }
 
 .wrapper_buttons {
+  flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 0.5rem;
 }
 
 .wrapper_buttons > button {
