--- a/src/components/image-tile-pond/index.module.css
+++ b/src/components/image-tile-pond/index.module.css
@@ -1,4 +1,5 @@
-.tile {
+.tile,
+.marked_tile {
   border-radius: 5px;
   background-color: white;
 
@@ -9,7 +10,11 @@
   grid-auto-rows: auto;
   padding: 3px 1px;
 
-
   position: relative;
   z-index: 1;
+}
+
+.marked_tile {
+  background-color: rgb(237, 197, 197);
+  /* background-color: red; */
 }
