--- a/src/pages/pinfu/slides/01/index.module.css
+++ b/src/pages/pinfu/slides/01/index.module.css
@@ -1,8 +1,9 @@
-.page {
-  height: 100%;
-  padding: 0 1rem;
+.content {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
-  gap: 3rem;
+  height: 100%;
+
+  padding: 0 1rem;
 }
