--- a/src/pages/terminology-of-hand-components/slides/02/index.module.css
+++ b/src/pages/terminology-of-hand-components/slides/02/index.module.css
@@ -1,6 +1,6 @@
 .slide {
   display: flex;
-  justify-content: center;
+  justify-content:  space-around;
   align-items: center;
   height: 50vh;
   width: 100%;
