--- a/src/components/3d-tiles-wrapper/index.module.css
+++ b/src/components/3d-tiles-wrapper/index.module.css
@@ -1,3 +1,11 @@
+.wrapper {
+  position: relative;
+  margin: 2px 0;
+  max-width: 1.8rem;
+  height: 1rem;
+  width: 1.5rem;
+}
+
 .tile,
 .h_tile {
   border-radius: 5px;
@@ -47,11 +55,4 @@
   right: 0;
   bottom: 5px;
   z-index: 1;
-}
-
-.wrapper {
-  position: relative;
-  margin: 2px 0;
-  max-width: 1.8rem;
-  height: 1rem;
 }
