--- a/src/pages/ukipai/slides/01/index.module.css
+++ b/src/pages/ukipai/slides/01/index.module.css
@@ -15,14 +15,6 @@
   width: 100%;
 }
 
-.two,
-.three,
-.four,
-.five,
-.six {
-  /* visibility: hidden; */
-}
-
-.x {
+.acceptance {
   display: none;
 }
